Collapse bar fix

--- a/src/App.css
+++ b/src/App.css
@@ -866,7 +866,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   background-repeat: no-repeat;
 }
 .footer img {
-  width: 23%;
+  width: 30%;
 }
 .social-icon-layout {
   text-align: center;
